add first html structure

--- a/src/app/shared/todo-add/todo-add.component.html
+++ b/src/app/shared/todo-add/todo-add.component.html
@@ -1,1 +1,13 @@
-<p>todo-add works!</p>
+<div class="addTodoWidget">
+  <form>
+    <input type="text">
+    <div *ngIf="isAddWidget then buttonAddWidget; else buttonAddTodoToWidget"></div>
+    <ng-template #buttonAddWidget>
+      <button type="button">+ Erstellen</button>
+    </ng-template>
+    <ng-template #buttonAddTodoToWidget>
+      <button type="button">+</button>
+    </ng-template>
+  </form>
+
+</div>
