--- a/src/app/shared/todo-item/todo-item.component.html
+++ b/src/app/shared/todo-item/todo-item.component.html
@@ -1,1 +1,7 @@
-<p>todo-item works!</p>
+<div class="items">
+  <p>todo-item works!</p>
+
+  <button>Check</button>
+  <button>Delete</button>
+
+</div>
