--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,11 +10,14 @@ li {
   float: left;
 }
 
+.logoLink {
+  float: right;
+}
+
 a {
   display: block;
   text-decoration: none;
   padding: 1rem 1rem;
   color: white;
 }
-
 
